updating request/response

--- a/docs/files/jupyter/pandas_series.ipynb
+++ b/docs/files/jupyter/pandas_series.ipynb
@@ -203,6 +203,180 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Indexing\n",
+    "Accessing values from a `pandas` Series."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# an example Series, with String labels\n",
+    "x = pd.Series({'foo': 22, 'bar': 44, 'baz': 66, 'bum': 88})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# access by label\n",
+    "x['bar']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# access by integer index (even with a custom-labeled Series)\n",
+    "x[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# access by integer index\n",
+    "x.iloc[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# access by label\n",
+    "x.loc['bar']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "foo    22\n",
+       "bar    44\n",
+       "baz    66\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# accessing a subset by integer indices\n",
+    "x[ [0, 1, 2] ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "foo    22\n",
+       "bar    44\n",
+       "baz    66\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# accessing a subset by integer indices\n",
+    "x.iloc[ [0, 1, 2] ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "foo    22\n",
+       "bar    44\n",
+       "baz    66\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# accessing a subset by label indices\n",
+    "x.loc[ ['foo', 'bar', 'baz'] ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Slicing\n",
     "Unlike `numpy` ndarrays, slicing a `pandas` Series will also slice the index."
    ]
@@ -229,6 +403,29 @@
     "# slice an automatically-indexed Series\n",
     "x = pd.Series([22, 44, 66, 88])\n",
     "x[2 : ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "baz    66\n",
+       "bum    88\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the same thing, using iloc\n",
+    "x.iloc[2 : ]"
    ]
   },
   {
@@ -538,6 +735,13 @@
     "# math operations will be performed on values that share the same label\n",
     "a + b"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
