working on the jupyter stuff

--- a/docs/files/jupyter/pandas_series.ipynb
+++ b/docs/files/jupyter/pandas_series.ipynb
@@ -4,12 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Series in pandas\n",
+    "A set of examples that exhibit some of the core features of the [Series](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.html) data type in the `pandas` module."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## import"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +47,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,6 +150,67 @@
     "# from a Python dictionary\n",
     "z = pd.Series({'foo': 22, 'bar': 44, 'baz': 66, 'bum': 88})\n",
     "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    5\n",
+       "1    5\n",
+       "2    5\n",
+       "3    5\n",
+       "4    5\n",
+       "5    5\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# from a scalar\n",
+    "a = pd.Series(5, index=[0, 1, 2, 3, 4, 5])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data types\n",
+    "Unlike `numpy` ndarrays, a single `pandas` Series can contain a variety of data types."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        hello\n",
+       "1           44\n",
+       "2         True\n",
+       "3         3.14\n",
+       "4    [1, 2, 3]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series( ['hello', 44, True, 3.14, [1, 2, 3] ] )"
    ]
   },
   {
@@ -255,7 +324,7 @@
     }
    ],
    "source": [
-    "# access by integer index (even with a custom-labeled Series)\n",
+    "# access by position (even with a custom-labeled Series)\n",
     "x[1]"
    ]
   },
@@ -297,7 +366,7 @@
     }
    ],
    "source": [
-    "# access by label\n",
+    "# access by label index\n",
     "x.loc['bar']"
    ]
   },
@@ -321,7 +390,7 @@
     }
    ],
    "source": [
-    "# accessing a subset by integer indices\n",
+    "# accessing a subset by positions\n",
     "x[ [0, 1, 2] ]"
    ]
   },
@@ -407,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +487,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +510,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,6 +519,13 @@
     "# slice a custom-indexed Series\n",
     "y = pd.Series([22, 44, 66, 88], index=['a', 'b', 'c', 'd'])\n",
     "y[2 : ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slice syntax within the brackets, `[` and `]`, generally works the same way as regular Python list slices and `numpy` slices."
    ]
   },
   {
@@ -696,7 +772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Alignment of labels\n",
+    "## Math operations and the alignment of labels\n",
     "Unlike `numpy` ndarrays, operations on Series automatically align by labels."
    ]
   },
@@ -737,11 +813,200 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Besides this difference, all the basic math operations (+, -, *, /) between two Series work the same way as in `numpy` ndarrays."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Heads and tails\n",
+    "When dealing with large amounts of data, it's sometimes useful to see a sample of the data, without viewing the entire data set.  The `head()`, `tail()`, and `sample()` functions can help with this."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# first, let's generate a large Series\n",
+    "\n",
+    "import numpy as np # import numpy for convience generating a lot of sample data\n",
+    "\n",
+    "# make a really big Series from a random numpy ndarray\n",
+    "x = pd.Series( np.random.random(5000) ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.009097\n",
+       "1    0.081031\n",
+       "2    0.097925\n",
+       "3    0.820679\n",
+       "4    0.488344\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get the head... the first few values\n",
+    "x.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4995    0.855257\n",
+       "4996    0.384321\n",
+       "4997    0.051243\n",
+       "4998    0.459006\n",
+       "4999    0.795251\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get the tail... the last few values\n",
+    "x.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1802    0.160638\n",
+       "3365    0.648595\n",
+       "969     0.376415\n",
+       "968     0.545410\n",
+       "1052    0.531933\n",
+       "1112    0.261903\n",
+       "4065    0.079034\n",
+       "1336    0.329661\n",
+       "1519    0.219835\n",
+       "405     0.754383\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get a sample of a few random values\n",
+    "x.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic statistics\n",
+    "Basic statistical functions, like `mean()`, `median()`, `min()`, `max()`, and `std()` work just like their `numpy` equivalents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.000000\n",
+       "1    3.020408\n",
+       "2    5.040816\n",
+       "3    7.061224\n",
+       "4    9.081633\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# make a linearly-spaced series of 50 values from 1 to 100\n",
+    "x = pd.Series( np.linspace(1, 100, 50)) \n",
+    "x.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.5"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate the mean value of the entire Series\n",
+    "x.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75.75510204081633"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate the mean value for only those values in the Series that are greater than 50\n",
+    "x[ x > 50 ].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the other statistics functions work similarly."
+   ]
   },
   {
    "cell_type": "code",
