joins, grouping, and more

--- a/docs/files/jupyter/pandas_series.ipynb
+++ b/docs/files/jupyter/pandas_series.ipynb
@@ -961,6 +961,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     4.000000\n",
+       "mean     55.000000\n",
+       "std      28.401878\n",
+       "min      22.000000\n",
+       "25%      38.500000\n",
+       "50%      55.000000\n",
+       "75%      71.500000\n",
+       "max      88.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get an overview of most common stats\n",
+    "x.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 137,
    "metadata": {},
    "outputs": [
@@ -1005,7 +1034,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the other statistics functions work similarly."
+    "The other statistics functions - `min()`, `max()`, `median()`, `std()`, `count()` - work similarly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    22\n",
+       "1    44\n",
+       "2    66\n",
+       "3    88\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
    ]
   },
   {
