adding value_counts and sort

--- a/docs/files/jupyter/pandas_dataframe.ipynb
+++ b/docs/files/jupyter/pandas_dataframe.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "2  Baz  bz2292@foo.edu            87          81"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 364,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "Name: midterm exam, dtype: int64"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 366,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 367,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,6 +264,273 @@
    "source": [
     "# get a row by its integer index\n",
     "df.iloc[2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sorting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>email</th>\n",
+       "      <th>midterm exam</th>\n",
+       "      <th>final exam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bar</td>\n",
+       "      <td>br9876@foo.edu</td>\n",
+       "      <td>64</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Baz</td>\n",
+       "      <td>bz2292@foo.edu</td>\n",
+       "      <td>87</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Foo</td>\n",
+       "      <td>fo1258@foo.edu</td>\n",
+       "      <td>99</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  name           email  midterm exam  final exam\n",
+       "1  Bar  br9876@foo.edu            64          72\n",
+       "2  Baz  bz2292@foo.edu            87          81\n",
+       "0  Foo  fo1258@foo.edu            99          94"
+      ]
+     },
+     "execution_count": 371,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sort by a column's value\n",
+    "df.sort_values(by='name', ascending=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 374,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>email</th>\n",
+       "      <th>midterm exam</th>\n",
+       "      <th>final exam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bar</td>\n",
+       "      <td>br9876@foo.edu</td>\n",
+       "      <td>64</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Baz</td>\n",
+       "      <td>bz2289@foo.edu</td>\n",
+       "      <td>88</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Baz</td>\n",
+       "      <td>bz2289@foo.edu</td>\n",
+       "      <td>88</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Baz</td>\n",
+       "      <td>bz2289@foo.edu</td>\n",
+       "      <td>88</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Baz</td>\n",
+       "      <td>bz2292@foo.edu</td>\n",
+       "      <td>87</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Foo</td>\n",
+       "      <td>fo1258@foo.edu</td>\n",
+       "      <td>99</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  name           email  midterm exam  final exam\n",
+       "1  Bar  br9876@foo.edu            64          72\n",
+       "3  Baz  bz2289@foo.edu            88          74\n",
+       "4  Baz  bz2289@foo.edu            88          74\n",
+       "5  Baz  bz2289@foo.edu            88          74\n",
+       "2  Baz  bz2292@foo.edu            87          81\n",
+       "0  Foo  fo1258@foo.edu            99          94"
+      ]
+     },
+     "execution_count": 374,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add a new row with the same name as an existing row, but a different email\n",
+    "new_row = pd.Series({ \n",
+    "    'name': 'Baz', \n",
+    "    'email': 'bz2289@foo.edu',\n",
+    "    'midterm exam': 88,\n",
+    "    'final exam': 74\n",
+    "})\n",
+    "\n",
+    "# append and automatically assign an index to new row\n",
+    "df = df.append(new_row, ignore_index=True) \n",
+    "\n",
+    "# sort by primary and secondary columns\n",
+    "df.sort_values(by=['name', 'email'], ascending=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>email</th>\n",
+       "      <th>midterm exam</th>\n",
+       "      <th>final exam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Baz</td>\n",
+       "      <td>bz2292@foo.edu</td>\n",
+       "      <td>87</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bar</td>\n",
+       "      <td>br9876@foo.edu</td>\n",
+       "      <td>64</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Foo</td>\n",
+       "      <td>fo1258@foo.edu</td>\n",
+       "      <td>99</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  name           email  midterm exam  final exam\n",
+       "2  Baz  bz2292@foo.edu            87          81\n",
+       "1  Bar  br9876@foo.edu            64          72\n",
+       "0  Foo  fo1258@foo.edu            99          94"
+      ]
+     },
+     "execution_count": 353,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sort by index\n",
+    "df.sort_index(ascending=False)"
    ]
   },
   {
@@ -2480,6 +2747,61 @@
    "metadata": {},
    "source": [
     "The other statistics functions - `min()`, `max()`, `mean()`, `std()`, `count()` - work similarly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Count values\n",
+    "The `value_counts()` function of a Series returns the number of times each value occurs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Experienced (non-manager)    737\n",
+       "Entry-Level                  183\n",
+       "Manager                      176\n",
+       "Student                      101\n",
+       "Executive                     19\n",
+       "Name: Career Level, dtype: int64"
+      ]
+     },
+     "execution_count": 329,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Career Level'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F    1087\n",
+       "P      42\n",
+       "Name: Full-Time/Part-Time indicator, dtype: int64"
+      ]
+     },
+     "execution_count": 330,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Full-Time/Part-Time indicator'].value_counts()"
    ]
   },
   {
