--- a/docs/files/jupyter/pandas_series.ipynb
+++ b/docs/files/jupyter/pandas_series.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -204,13 +204,81 @@
        "dtype: object"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.Series( ['hello', 44, True, 3.14, [1, 2, 3] ] )"
+    "s = pd.Series( ['hello', 44, True, 3.14, [1, 2, 3] ] )\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert data types with `astype()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        hello\n",
+       "1           44\n",
+       "2         True\n",
+       "3         3.14\n",
+       "4    [1, 2, 3]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert to string\n",
+    "s = s.astype(str)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lambda expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        hello hello\n",
+       "1           hello 44\n",
+       "2         hello True\n",
+       "3         hello 3.14\n",
+       "4    hello [1, 2, 3]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# run a function to transform each value in the series\n",
+    "s.apply(lambda x: 'hello ' + x)"
    ]
   },
   {
@@ -223,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +304,7 @@
        "Name: non-anonymous Series, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,6 +594,88 @@
    "metadata": {},
    "source": [
     "Slice syntax within the brackets, `[` and `]`, generally works the same way as regular Python list slices and `numpy` slices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sorting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Foo\n",
+       "1    Bar\n",
+       "2    Baz\n",
+       "3    Bum\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# unsorted\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3    Bum\n",
+       "2    Baz\n",
+       "1    Bar\n",
+       "0    Foo\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sorted by index\n",
+    "y.sort_index(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    Bar\n",
+       "2    Baz\n",
+       "3    Bum\n",
+       "0    Foo\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sorted by value\n",
+    "y.sort_values(ascending=True)"
    ]
   },
   {
