fixing slide formatting

--- a/docs/files/jupyter/pandas_series.ipynb
+++ b/docs/files/jupyter/pandas_series.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,20 +761,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    24\n",
-       "1    46\n",
-       "2    68\n",
-       "3    90\n",
+       "0    22\n",
+       "1    44\n",
+       "2    66\n",
+       "3    88\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,12 +782,13 @@
    "source": [
     "# add a scalar to all values in a Series\n",
     "x = pd.Series([22, 44, 66, 88])\n",
-    "x + 2"
+    "x + 2\n",
+    "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +801,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +827,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,20 +895,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     44\n",
-       "1     88\n",
-       "2    132\n",
-       "3    176\n",
+       "0    24\n",
+       "1    46\n",
+       "2    68\n",
+       "3    90\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,6 +917,33 @@
     "# add two series together\n",
     "x = pd.Series([22, 44, 66, 88])\n",
     "x + x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    25\n",
+       "b    48\n",
+       "c    68\n",
+       "d    89\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add two series together\n",
+    "x = pd.Series([22, 44, 66, 88], index=['a', 'b', 'c', 'd'])\n",
+    "y = pd.Series([1, 2, 3, 4], index=['d', 'c', 'a', 'b'])\n",
+    "x + y"
    ]
   },
   {
@@ -979,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,21 +1021,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    0.009097\n",
-       "1    0.081031\n",
-       "2    0.097925\n",
-       "3    0.820679\n",
-       "4    0.488344\n",
+       "0       0.081618\n",
+       "1       0.532477\n",
+       "2       0.878032\n",
+       "3       0.608577\n",
+       "4       0.302715\n",
+       "          ...   \n",
+       "4995    0.544468\n",
+       "4996    0.162016\n",
+       "4997    0.977883\n",
+       "4998    0.155737\n",
+       "4999    0.198541\n",
+       "Length: 5000, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get the default of what's in x\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.081618\n",
+       "1    0.532477\n",
+       "2    0.878032\n",
+       "3    0.608577\n",
+       "4    0.302715\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,21 +1079,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4995    0.855257\n",
-       "4996    0.384321\n",
-       "4997    0.051243\n",
-       "4998    0.459006\n",
-       "4999    0.795251\n",
+       "4995    0.544468\n",
+       "4996    0.162016\n",
+       "4997    0.977883\n",
+       "4998    0.155737\n",
+       "4999    0.198541\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,33 +1105,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1802    0.160638\n",
-       "3365    0.648595\n",
-       "969     0.376415\n",
-       "968     0.545410\n",
-       "1052    0.531933\n",
-       "1112    0.261903\n",
-       "4065    0.079034\n",
-       "1336    0.329661\n",
-       "1519    0.219835\n",
-       "405     0.754383\n",
+       "2682    0.590757\n",
+       "1161    0.007108\n",
+       "878     0.275778\n",
+       "2050    0.666622\n",
+       "1396    0.261979\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# get a sample of a few random values\n",
-    "x.sample(10)"
+    "x.sample(5)"
    ]
   },
   {
@@ -1084,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1098,37 +1153,37 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# make a linearly-spaced series of 50 values from 1 to 100\n",
-    "x = pd.Series( np.linspace(1, 100, 50)) \n",
+    "x = pd.Series( np.linspace(1, 100, 50) ) \n",
     "x.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count     4.000000\n",
-       "mean     55.000000\n",
-       "std      28.401878\n",
-       "min      22.000000\n",
-       "25%      38.500000\n",
-       "50%      55.000000\n",
-       "75%      71.500000\n",
-       "max      88.000000\n",
+       "count     50.000000\n",
+       "mean      50.500000\n",
+       "std       29.452257\n",
+       "min        1.000000\n",
+       "25%       25.750000\n",
+       "50%       50.500000\n",
+       "75%       75.250000\n",
+       "max      100.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1204,7 @@
        "50.5"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,23 +1216,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "75.75510204081633"
+       "2.010204081632653"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# calculate the mean value for only those values in the Series that are greater than 50\n",
-    "x[ x > 50 ].mean()"
+    "x[ x < 5 ].mean()"
    ]
   },
   {
