--- a/docs/files/jupyter/pandas_dataframe.ipynb
+++ b/docs/files/jupyter/pandas_dataframe.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "2  Baz  bz2292@foo.edu            87          81"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "Name: midterm exam, dtype: int64"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "0  Foo  fo1258@foo.edu            99          94"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "0  Foo  fo1258@foo.edu            99          94"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "0  Foo  fo1258@foo.edu            99          94"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "1  Bar  br9876@foo.edu            64          72"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "3  Baz  bz2289@foo.edu            88          74"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "3  Baz          74"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
        "81"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,30 +822,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    99\n",
-       "1    64\n",
-       "Name: midterm exam, dtype: int64"
+       "0    Foo\n",
+       "1    Bar\n",
+       "Name: name, dtype: object"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# filter rows by criteria, and fetch one column from the results - this returns a Series\n",
-    "df[ df['name'] != 'Baz']['midterm exam']"
+    "df[ df['name'] != 'Baz'][ 'name' ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
        "1  Bar            64"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
        "3  Baz  bz2289@foo.edu            90          74"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
        "      <td>fo1258@foo.edu</td>\n",
        "      <td>101</td>\n",
        "      <td>94</td>\n",
-       "      <td>N89294433</td>\n",
+       "      <td>N44178987</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1044,7 +1044,7 @@
        "      <td>br9876@foo.edu</td>\n",
        "      <td>66</td>\n",
        "      <td>72</td>\n",
-       "      <td>N37799380</td>\n",
+       "      <td>N76049874</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1052,7 +1052,7 @@
        "      <td>bz2292@foo.edu</td>\n",
        "      <td>89</td>\n",
        "      <td>81</td>\n",
-       "      <td>N79937179</td>\n",
+       "      <td>N311127</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1060,7 +1060,7 @@
        "      <td>bz2289@foo.edu</td>\n",
        "      <td>90</td>\n",
        "      <td>74</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>N6761118</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1068,13 +1068,13 @@
       ],
       "text/plain": [
        "  name           email  midterm exam  final exam   n number\n",
-       "0  Foo  fo1258@foo.edu           101          94  N89294433\n",
-       "1  Bar  br9876@foo.edu            66          72  N37799380\n",
-       "2  Baz  bz2292@foo.edu            89          81  N79937179\n",
-       "3  Baz  bz2289@foo.edu            90          74        NaN"
+       "0  Foo  fo1258@foo.edu           101          94  N44178987\n",
+       "1  Bar  br9876@foo.edu            66          72  N76049874\n",
+       "2  Baz  bz2292@foo.edu            89          81    N311127\n",
+       "3  Baz  bz2289@foo.edu            90          74   N6761118"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1083,7 @@
     "# add a new column to the dataframe...\n",
     "\n",
     "# first, generate a Series of fake student ids\n",
-    "n_numbers = pd.Series(100000000*np.random.random(3)) # generate a series of random numbers\n",
+    "n_numbers = pd.Series(100000000 * np.random.random(4) ) # generate a series of random numbers\n",
     "n_numbers = n_numbers.astype(int) # convert to a simple int to remove decimal place\n",
     "n_numbers = 'N' + n_numbers.map(str) # add the letter 'N' in front of each number (first convert each to str)\n",
     "\n",
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
        "1  Organic Gardening   Theater Lighting"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -1435,28 +1435,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>N89294433</th>\n",
+       "      <th>N44178987</th>\n",
        "      <td>Foo</td>\n",
        "      <td>fo1258@foo.edu</td>\n",
        "      <td>101</td>\n",
        "      <td>94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>N37799380</th>\n",
+       "      <th>N76049874</th>\n",
        "      <td>Bar</td>\n",
        "      <td>br9876@foo.edu</td>\n",
        "      <td>66</td>\n",
        "      <td>72</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>N79937179</th>\n",
+       "      <th>N311127</th>\n",
        "      <td>Baz</td>\n",
        "      <td>bz2292@foo.edu</td>\n",
        "      <td>89</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NaN</th>\n",
+       "      <th>N6761118</th>\n",
        "      <td>Baz</td>\n",
        "      <td>bz2289@foo.edu</td>\n",
        "      <td>90</td>\n",
@@ -1469,13 +1469,13 @@
       "text/plain": [
        "          name           email  midterm exam  final exam\n",
        "n number                                                \n",
-       "N89294433  Foo  fo1258@foo.edu           101          94\n",
-       "N37799380  Bar  br9876@foo.edu            66          72\n",
-       "N79937179  Baz  bz2292@foo.edu            89          81\n",
-       "NaN        Baz  bz2289@foo.edu            90          74"
+       "N44178987  Foo  fo1258@foo.edu           101          94\n",
+       "N76049874  Bar  br9876@foo.edu            66          72\n",
+       "N311127    Baz  bz2292@foo.edu            89          81\n",
+       "N6761118   Baz  bz2289@foo.edu            90          74"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
